feat: updated buttons and colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,8 @@
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
+    --core: 144 100% 33.3%;
+    --core-border: 146 63.9 35.9;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 10% 3.9%;
